# blog-restapi-service

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  alembic.ini  hash.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/: obtain-peotry.yml
.github/workflows/: conduct_tests.yml  create_docs.yml  main.yml
alembic/: env.py
alembic/versions/: 0a5f236fdb8e_initial_db_generation.py  c8b1eede9fc1_adjusted_the_image_url_field_in_the_.py  d18253d5cdec_first_commit.py  e77d231aa500_initial_setup.py  fcd834f5ac05_initial_db_generation.py
app/: app.py  init_db.py  main.py
app/alembic/: env.py
app/alembic/versions/: d18253d5cdec_first_commit.py
app/config/: settings.py
app/db/: base.py
app/models/: article_model.py  project_model.py  skill_categories_model.py  skill_levels_model.py  skill_model.py  user_model.py
app/routers/: api.py
app/routers/v1/: articles.py  articles_route.py  auth_route.py  projects_route.py  user_route.py
app/schemas/: __init__.py  articles_schema.py  auth_schema.py  projects_schema.py  skills.py  skills_schema.py  token_schema.py  user_schema.py
app/services/: articles_service.py  auth_service.py  projects_service.py  token_service.py  user_service.py
app/util/: httpException.py  jwt_authentication.py
changelog/: index.html
docs/: app_code.md
docs/scripts/: gen_ref_pages.py
license/: index.html
reference/SUMMARY/: index.html
reference/config/: index.html
reference/config/settings/: index.html
reference/db/: index.html
reference/db/base/: index.html
reference/db/base_models/: index.html
reference/db/init_db/: index.html
reference/main/: index.html
reference/models/: index.html
reference/models/article_model/: index.html
reference/models/project_model/: index.html
reference/models/skill_model/: index.html
reference/models/user_model/: index.html
reference/routers/: index.html
reference/routers/api/: index.html
reference/routers/v1/: index.html
reference/routers/v1/articles_route/: index.html
reference/routers/v1/auth_route/: index.html
reference/routers/v1/projects_route/: index.html
reference/routers/v1/skills_route/: index.html
reference/routers/v1/user_route/: index.html
reference/schemas/: index.html
reference/schemas/articles_schema/: index.html
reference/schemas/auth_schema/: index.html
reference/schemas/projects_schema/: index.html
reference/schemas/skills_schema/: index.html
reference/schemas/tags_schema/: index.html
reference/schemas/token_schema/: index.html
reference/schemas/user_schema/: index.html
reference/services/: index.html
reference/services/articles_service/: index.html
reference/services/auth_service/: index.html
reference/services/projects_service/: index.html
reference/services/skills_service/: index.html
reference/services/token_service/: index.html
reference/services/user_service/: index.html
reference/util/: index.html
reference/util/jwt_authentication/: index.html
search/: search_index.json
src/: init_db.py  main.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  base.py  base_models.py  init_db.py
src/models/: __init__.py  article_model.py  project_model.py  skill_categories_model.py  skill_levels_model.py  skill_model.py  user_model.py
src/routers/: __init__.py  api.py
src/routers/v1/: __init__.py  articles_route.py  auth_route.py  projects_route.py  skills_route.py  user_route.py
src/schemas/: __init__.py  articles_schema.py  auth_schema.py  projects_schema.py  skills_schema.py  tags_schema.py  token_schema.py  user_schema.py
src/services/: __init__.py  articles_service.py  auth_service.py  projects_service.py  skills_service.py  token_service.py  user_service.py
src/util/: __init__.py  jwt_authentication.py
tests/: conftest.py
tests/routes/v1/: test_articles_route.py
tests/utils/: article.py  utils.py
